完成直接進入牌桌、隨機發牌、選卡效果

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,9 +24,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:onClick="singleGame"
-        android:text="@string/str_singleGame"
+        android:text="@string/str_btnTest1"
         android:textSize="24sp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/btn_multiGame"
         app:layout_constraintEnd_toEndOf="@+id/iv_title"
         app:layout_constraintHorizontal_bias="0.5"
