--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF121212</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="yellow">#FFC107</color>
+    <color name="darkYellow">#C7802D</color>
 </resources>
